Get both Selenium 2 and 3 Grid working again